# project_in_robotics_clothing_manipulation

./: .gitignore  .gitmodules  README.md  TODO.txt  analyze_visibility.py  folds.csv  points.csv  readme.md  requirements.txt  simple_infer.py  virtual_environment_setup.txt
AI_model/: init.sh  openvla_mini init.sh  test.py
clothing_ai/: augment_images.py  backbone_inference.py  backbone_organize_data.py  backbone_resume_train.py  backbone_train.py  backbone_validate.py  backbone_validation_extended.py  camera_settings.json  clean_label_studio_data.py  finetune.py  head_clean_label_studio_data.py  head_inference.py  head_train.py  head_train_v1.py  head_train_v1_reg.py  head_train_v2.py  resume_train.py  validate_v1.py  verify_training_data.py  visualize_annotations.py
clothing_ai/ai_version2/: filter_data.py  train.py
clothing_ai/data/annos/: 100_Color.json  10_Color.json  111_Color.json  112_Color.json  113_Color.json  114_Color.json  115_Color.json  116_Color.json  117_Color.json  118_Color.json  119_Color.json  11_Color.json  120_Color.json  121_Color.json  122_Color.json  123_Color.json  124_Color.json  125_Color.json  126_Color.json  127_Color.json  128_Color.json  129_Color.json  12_Color.json  130_Color.json  131_Color.json  132_Color.json  133_Color.json  134_Color.json  135_Color.json  136_Color.json  137_Color.json  138_Color.json  139_Color.json  13_Color.json  140_Color.json  141_Color.json  142_Color.json  143_Color.json  144_Color.json  145_Color.json  (+442 more)
clothing_ai/data/first/: project-1-at-2025-11-05-14-05-18b1dbab.json  project-2-at-2025-11-05-14-33-62a5adac.csv  project-2-at-2025-11-05-14-33-62a5adac.json
clothing_ai/data/label_studio_csv_files/: Validation_images_first.csv  Validation_images_middle.csv  combined.csv  first_1.csv  last.csv  middle.csv  validation_combined.csv  validation_images_last.csv
clothing_ai/data/val_annos/: 100_Color.json  10_Color.json  11_Color.json  12_Color.json  13_Color.json  14_Color.json  15_Color.json  16_Color.json  17_Color.json  18_Color.json  19_Color.json  1_Color.json  20_Color.json  21_Color.json  22_Color.json  23_Color.json  24_Color.json  25_Color.json  26_Color.json  27_Color.json  28_Color.json  29_Color.json  2_Color.json  30_Color.json  31_Color.json  32_Color.json  33_Color.json  34_Color.json  35_Color.json  36_Color.json  37_Color.json  38_Color.json  39_Color.json  3_Color.json  40_Color.json  41_Color.json  42_Color.json  43_Color.json  45_Color.json  46_Color.json  (+59 more)
clothing_ai/runs/finetune_logs/: events.out.tfevents.1762427299.alex-XPS-15-9500.41873.0  events.out.tfevents.1762427435.alex-XPS-15-9500.42068.0  events.out.tfevents.1762428513.alex-XPS-15-9500.43888.0  events.out.tfevents.1762436246.alex-XPS-15-9500.12772.0  events.out.tfevents.1762436872.alex-XPS-15-9500.13674.0  events.out.tfevents.1762439983.alex-XPS-15-9500.4843.0
clothing_ai/runs/finetune_v1_logs/: events.out.tfevents.1762867837.alex-XPS-15-9500.16954.0  events.out.tfevents.1762898198.alex-XPS-15-9500.6754.0
clothing_ai/runs/finetune_v1_reg_logs/: events.out.tfevents.1762944245.alex-XPS-15-9500.25640.0  events.out.tfevents.1762944331.alex-XPS-15-9500.26823.0  events.out.tfevents.1762944365.alex-XPS-15-9500.26978.0
clothing_ai/runs/finetune_v2/: events.out.tfevents.1762867147.alex-XPS-15-9500.13035.0
clothing_ai/runs/finetune_v2_logs/: events.out.tfevents.1762442387.alex-XPS-15-9500.10005.0  events.out.tfevents.1762442469.alex-XPS-15-9500.10063.0  events.out.tfevents.1762866711.alex-XPS-15-9500.12050.0
clothing_ai/runs/finetune_v3_xy_logs/: events.out.tfevents.1762866998.alex-XPS-15-9500.12509.0
clothing_ai/runs/head_logs/: events.out.tfevents.1762945064.alex-XPS-15-9500.31927.0  events.out.tfevents.1762946790.alex-XPS-15-9500.6620.0  events.out.tfevents.1762947853.alex-XPS-15-9500.11559.0
image_analysis/: image_analysis.py  segmentation.py
image_analysis/camera_test/: test.py
image_analysis/estimate_points/: test.py
image_analysis/report/background_subtraction/: background_subtract.py
image_analysis/report/color_segmentation/: color_segmentation.py
image_analysis/report/geometric_shapes/: image_analysis.py
scripts/: openvla-mini.py  requirements.txt  save_ros_images.py  startup.sh  vla_deploy.py  web_server.py  web_server_simple.py
src/clothing_ai_pkg/: package.xml  setup.cfg  setup.py
src/clothing_ai_pkg/clothing_ai_pkg/: get_landmarks.py  get_landmarks_sift_cor.py
src/clothing_ai_pkg/data/: empty.txt
src/custom_interfaces_pkg/: CMakeLists.txt  package.xml
src/custom_interfaces_pkg/srv/: FoldPointToPoint.srv  GetLandmarks.srv  GetLandmarksSiftCor.srv  GetPickAndPlacePoint.srv  ImageToBase.srv  Inference.srv  RobotCmd.srv
src/image_processing_pkg/: package.xml  setup.cfg  setup.py
src/image_processing_pkg/homography_generation/: data_points.csv  data_points_new.csv  generate_homography.py
src/image_processing_pkg/image_processing_pkg/: folding_instructions.py  (+2 more)
src/openvla_controller/: CMakeLists.txt  package.xml
src/openvla_controller/src/: openvla_commander.cpp
src/py_srvcli/: package.xml  setup.py
src/robot_controller_pkg/: CMakeLists.txt  package.xml
src/robot_controller_pkg/msg/: RobotCmd.msg
src/robot_controller_pkg/src/: arm_controller.cpp  fold_point_to_point.cpp  gripper_controller.cpp  robot_controller.cpp
src/robot_controller_pkg/srv/: RobotCmd.srv
src/system_integrator/: package.xml  setup.cfg  setup.py
src/system_integrator_pkg/: CMakeLists.txt  package.xml
src/system_integrator_pkg/launch/: main_system.launch.py  main_system2.launch.py
src/system_integrator_pkg/src/: main.cpp  main2.cpp
src/vla_inference/: package.xml  setup.cfg  setup.py
src/vla_pkg/: package.xml  setup.cfg  setup.py
test_results/: ratings_black_square.csv  ratings_black_star.csv  ratings_dino_square.csv  ratings_dino_star.csv
ucloud/: startup.sh
ucloud/scripts/: openvla-mini.py  web_server.py
visibility_analysis/: all_visibility_scores.txt  visibility_stats.csv
(+13 files in other folders)
